k8s/ingress/ssom-backend/base/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssom-backend-ingress
  namespace: ssom
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ssom.kudong.kr
      secretName: kudong-ssom-tls-secret
  rules:
    - host: ssom.kudong.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssom-backend-dev
                port:
                  number: 80
